{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 43,
  "lineage": "3ee6865d-685a-b64b-4256-cd37bcdcf70c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Public-Interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fac77eb5bdafb1c",
            "associate_with_private_ip": "10.0.1.244",
            "association_id": "eipassoc-0d209bf160118ec7a",
            "domain": "vpc",
            "id": "eipalloc-09fac77eb5bdafb1c",
            "instance": "i-0c311ec2742a1a7ff",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0acd663b2858a67e1",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_ip": "10.0.1.244",
            "public_dns": "ec2-52-201-71-154.compute-1.amazonaws.com",
            "public_ip": "52.201.71.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_network_interface.webserver-nic",
            "aws_security_group.security_group_prod",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4f7023847b90238",
            "arn": "arn:aws:ec2:us-east-1:957382319589:instance/i-0c311ec2742a1a7ff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c311ec2742a1a7ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0acd663b2858a67e1"
              }
            ],
            "primary_network_interface_id": "eni-0acd663b2858a67e1",
            "private_dns": "ip-10-0-1-244.ec2.internal",
            "private_ip": "10.0.1.244",
            "public_ip": "52.201.71.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c364f4d3f619db48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603daeb1c4d622c7",
            "tags": {
              "Name": "WebServer-Terr"
            },
            "tags_all": {
              "Name": "WebServer-Terr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0d506f3544f71b3"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver-nic",
            "aws_security_group.security_group_prod",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terr_InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:internet-gateway/igw-0bb32ab360f57438f",
            "id": "igw-0bb32ab360f57438f",
            "owner_id": "957382319589",
            "vpc_id": "vpc-030d0b5dcdb10df17"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:network-interface/eni-0acd663b2858a67e1",
            "attachment": [
              {
                "attachment_id": "eni-attach-052cf92b1d492de43",
                "device_index": 0,
                "instance": "i-0c311ec2742a1a7ff"
              }
            ],
            "id": "eni-0acd663b2858a67e1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c8:3f:18:42:c5",
            "owner_id": "957382319589",
            "private_ip": "10.0.1.244",
            "private_ip_list": [
              "10.0.1.244"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.244"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c0d506f3544f71b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0603daeb1c4d622c7"
          },
          "dependencies": [
            "aws_security_group.security_group_prod",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terr_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:route-table/rtb-0cd8a4b22fee164d1",
            "id": "rtb-0cd8a4b22fee164d1",
            "owner_id": "957382319589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb32ab360f57438f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod"
            },
            "tags_all": {
              "Name": "Prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-030d0b5dcdb10df17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-1-Terr_Route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05162deb0291c5e8b",
            "route_table_id": "rtb-0cd8a4b22fee164d1",
            "subnet_id": "subnet-0603daeb1c4d622c7"
          },
          "dependencies": [
            "aws_internet_gateway.Terr_InternetGateway",
            "aws_route_table.Terr_Route_table",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:security-group/sg-0c0d506f3544f71b3",
            "description": "allows web traffic to webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0d506f3544f71b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow web traffic",
            "name_prefix": "",
            "owner_id": "957382319589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow Web and SSH"
            },
            "tags_all": {
              "Name": "Allow Web and SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-030d0b5dcdb10df17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:subnet/subnet-0603daeb1c4d622c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0603daeb1c4d622c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "957382319589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Prod-Subnet"
            },
            "tags_all": {
              "Name": "Prod-Subnet"
            },
            "vpc_id": "vpc-030d0b5dcdb10df17"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957382319589:vpc/vpc-030d0b5dcdb10df17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2d7b71869b5078f",
            "default_route_table_id": "rtb-06f9f34d41262b9c3",
            "default_security_group_id": "sg-0047a5118caf92305",
            "dhcp_options_id": "dopt-3572394f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-030d0b5dcdb10df17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f9f34d41262b9c3",
            "owner_id": "957382319589"
          }
        }
      ]
    }
  ]
}